--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang="en-UK", id="ng-app", ng-app="FourSquareApp")
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -12,4 +12,7 @@ html
       
   body
     block content
-    p this a footer
+    
+  script(src='/javascripts/app.js')
+  script(src='/javascripts/controllers.js')
+  script(src='/javascripts/services.js')  
