google maps to the list

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,9 @@ html(lang="en-UK", id="ng-app", ng-app="FourSquareApp")
     script(src='/javascripts/vendors/jquery/jquery.min.js')
     script(src='/javascripts/vendors/angular/angular.min.js')
     script(src='/javascripts/vendors/angular-route/angular-route.min.js')
-    script(src='/javascripts/vendors/angular/ui-bootstrap-tpls.min.js')  
+    script(src='/javascripts/vendors/angular/ui-bootstrap-tpls.min.js')
+    script(src="//maps.google.com/maps/api/js")
+    script(src='/javascripts/vendors/ng-map.min.js')    
       
   body
     block content
