--- a/views/templates/home.jade
+++ b/views/templates/home.jade
@@ -8,16 +8,23 @@ div(ng-controller="MainCtrl as mainCtrl")
   div(ng-repeat="place in mainCtrl.places")
     div(ng-repeat="venue in place.venues", class="list-group")
       div(class="list-group-item")
-        p
-          label Venue Name : 
-          span 
-            a(target="_blank", href="{{venue.url}}")
-              {{venue.name}}
-        p
-          label Adress : 
-          span {{venue.location.address}}
-        p
-          label Here Now : 
-          span {{venue.hereNow.summary}}
+        div(class="col-xs-6 col-sm-4")
+          p
+            label Venue Name : 
+            span 
+              a(target="_blank", href="{{venue.url}}")
+                {{venue.name}}
+          p
+            label Adress : 
+            span {{venue.location.address}}
+          p
+            label Here Now : 
+            span {{venue.hereNow.summary}}
+        div(class="col-xs-6 col-sm-4")
+          map(center="{{venue.location.lat}},{{venue.location.lng}}" zoom="16")
+            info-window(position="{{venue.location.lat}},{{venue.location.lng}}" visible="true") 
+              span
+                {{venue.name}}
+        div(class="clearfix")
       
     
